--- a/src/app/modules/recruitment/admin-dashboard/reports/reports.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/reports/reports.component.html
@@ -2,6 +2,6 @@
 <div>
   <nb-card>
     <ngx-tableheader></ngx-tableheader>
-    <ngx-tablecomponent  [tableColum]="reportTable"></ngx-tablecomponent>
+    <ngx-tablecomponent  [tableColum]="reportTable" [userData]="allJobsApplication"></ngx-tablecomponent>
   </nb-card>
 </div>
