--- a/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
@@ -202,7 +202,7 @@
                 <option value="">Select </option>
                 <option *ngFor="let card of allScoreCards" [value]="card.id">{{ card.focusArea }}</option>
               </select>
-              
+
             </div>
           </div>
 
@@ -223,7 +223,8 @@
               <button *ngIf="!loading" nbButton status="primary" (click)="addNewJob()">Post Now</button>
               <button *ngIf="loading" nbButton status="primary">Now Processing &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
               <span style="padding: 8px;"></span>
-              <button nbButton (click)="postNewDraft()">Save as Draft</button>
+              <button *ngIf="loading" nbButton (click)="postNewDraft()">Save as Draft</button>
+
             </div>
           </div>
         </form>
