--- a/src/app/modules/recruitment/admin-dashboard/quiz/quiz.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/quiz/quiz.component.html
@@ -84,7 +84,8 @@
       </nb-card>
 
         <div modal-actions class="d-flex">
-          <button nbButton status="primary" class="d-flex column" (click)="updateMyQuiz()">Update</button>
+          <button *ngIf="!loading" nbButton status="primary" class="d-flex column" (click)="updateMyQuiz()">Update</button>
+          <button *ngIf="loading" nbButton status="primary">Now Processing &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
           <button nbButton outline status="primary" class="d-flex column" (click)="cancelUpdate()">Cancel</button>
          </div>
   </div>
