Updated applicant sign up

--- a/src/app/modules/recruitment/applicantssignup/applicantssignup.component.html
+++ b/src/app/modules/recruitment/applicantssignup/applicantssignup.component.html
@@ -76,9 +76,19 @@
 
                   </div>
 
+                  <div class="form-group">
+                    <label for="exampleInputPassword1" class="label">Password</label>
+                    <div style="display: flex;border: 0.800000011920929px solid #CED4DA;border-radius: 3px;background-color: #f7f9fc;padding: 5px;">
+                      <input type="password" nbInput fullWidth id="exampleInputPassword1" placeholder="Password" style="border: none;">
+                      <nb-icon  icon="eye-off-outline" style="font-size: 32px;color: #95A8B8;"></nb-icon>
+                    </div>
+
+                  </div>
+
                   <div style="padding: 5px;"></div>
 
-                  <button type="button" nbButton fullWidth status="primary" (click)="regiterApplicant()">Continue</button>
+                  <button  *ngIf="!loading" type="button" nbButton fullWidth status="primary" (click)="regiterApplicant()">Continue</button>
+                  <button *ngIf="loading" nbButton fullWidth status="primary">Logging &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
                   <div style="padding: 5px;"></div>
                 </form>
                 <div style="padding: 5px;"></div>
